<resources>
    <string name="app_name">GroupExpenses</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_position">PositionActivity</string>
    <string name="event_form_name">name of event</string>
    <string name="event_form_date_begin">begin date</string>
    <string name="event_form_date_end">end date</string>
    <string name="event_form_one_day">One-day-Event</string>
    <string name="event_form_payment_deadline">Payment Deadline</string>
    <string name="ok">OK</string>
    <string name="unknown">unknown</string>
    <string name="add_with_num">Add (%1$d)</string>
    <string name="remove_with_num">Remove (%1$d)</string>
    <string name="add_remove">Add/Remove</string>
    <string name="event_form_add_friend">Add friend</string>
    <string name="search_name_hint">search a name</string>
    <string name="info">Info</string>
    <string name="show_info">show info</string>
    <string name="info_small">info</string>
    <string name="inspect_users">Teilnehmer inspizieren</string>
    <string name="no_position_info">No position info available!</string>
    <string name="event_expenses_you">Your expenses:</string>
    <string name="event_expenses_ratio">(%1s\%% from total)</string>
    <string name="event_form_users">Teilnehmer</string>
    <string name="event_form_begin">Beginn</string>
    <string name="event_form_create_event">create new event</string>
    <string name="event_inspect_event_info">Event info:</string>
    <string name="position_form_value">Value (€)</string>
    <string name="position_form_create_position">create new position</string>
    <string name="position_inspect_position_info">Position info</string>
    <string name="add_payment">add payment</string>
    <string name="fulfill_payment_confirm_msg">Pay %1$s %2$s€ online now?</string>
    <string name="chose_cash">Cash Transaction</string>
    <string name="confirm_cash_payment">%1$s has paid you %2$s€ per cash?</string>
    <string name="done_cash_payment">Cash transaction complete!</string>
    <string name="done_paypal_payment">Paypal transaction complete!</string>
    <string name="error_paypal_payment">Paypal transaction could not be completed!</string>
    <string name="error_wrong_time_for_payment">Payments/ Reminders can online be fulfilled during LOCKED state!</string>
    <string name="error_not_all_events_locked">NOT POSSIBLE!\nAt least one event is not in LOCKED state!</string>
    <string name="done_delete_position">Position deleted!</string>
    <string name="error_cash_payment">No cash transaction could be completed!</string>
    <string name="chose_remind">Remind for payment</string>
    <string name="position_inspect_change_dept_claim_val">Edit debt amount</string>
    <string name="error_field_required">field cannot be empty!</string>
    <string name="error_smaller_than_zero">Value cannot be smaller than zero!</string>
    <string name="error_bigger_than_10000">Value cannot be bigger than 10.000€!</string>
    <string name="error_users_required">At least one member is required!</string>
    <string name="error_invalid_date">Invalid date!</string>
    <string name="error_end_date_before_start_date">End date comes before start date!</string>
    <string name="error_event_start_in_past">Event starts in the past!</string>
    <string name="done">done</string>
    <string name="create">create</string>
    <string name="confirm">Confirm</string>
    <string name="events_loading">loading events…</string>
    <string name="no_positions">no positions found!</string>
    <string name="confirm_delete_position">Delete position?\nImportant: All of your claims will be gone!</string>
    <string name="total_balance">Total Balance</string>
    <string name="your_event_balance">Your event balance:</string>
    <string name="total_expenses">Global Expenses</string>
    <string name="euro">€</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="load_friends">loading list of friends …</string>
    <string name="FriendsActivityTitle">friends</string>
    <string name="desc_firebase_lockup">firebase lookup</string>
    <string name="login_title">Group Expenses</string>
    <string name="back_creation">Back</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="emailpassword_status_fmt">User: %1$s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="auth_failed">Auth failed</string>
    <string name="create_account_failed">Create new Account failed</string>
    <string name="account_successfully_created">Account successfully created!</string>
    <string name="resetPassword">reset Password</string>
    <string name="resetPassword_success">Send ResetEmail to %s</string>
    <string name="resetPassword_error">Error occurred</string>
    <string name="info_verification_fmt">Verification email sent to %s</string>
    <string name="info_verification_error">Failed to send verification email.</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_profile">Profil</string>
    <string name="labelProfileEmail">E-Mail Adresse</string>
    <string name="labelNickname">Nickname</string>
    <string name="labelInfo">Über mich</string>
    <string name="nickname">nickname</string>
    <string name="email_small">email</string>
    <string name="edit_profile_name">Edit Name</string>
    <string name="my_profile">My Profile</string>
    <string name="back">Zurück</string>
    <string name="error_invalid_name">invalid</string>
    <string name="error_invalid_input">required</string>
    <string name="file_provider_authority">de.thm.ap.groupexpenses.fileprovider</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_file_couldnt_upload">File could not uploaded</string>
    <string name="success_profile_pic_uploaded">Profile Picture successful uploaded</string>
    <string name="success_download_ProfilePic">Successful download profile pic</string>
    <string name="error_download_ProfilePic">Error while downloading profile pic</string>
    <string name="menu_item_event">My Events</string>
    <string name="send_per_mail">send via E-Mail</string>
    <string name="send_per_whatsapp">send via WhatsApp</string>
    <string name="send_per_copy">copy link to phone cache</string>
    <string name="lastname">last name</string>
    <string name="hint_not_set">not set</string>
    <string name="displayname">display name</string>
    <string name="enableEditMode">Editmode</string>
    <string name="labelLastName">Last name</string>
    <string name="labelFirstName">First name</string>
    <string name="no_bounty">Sie haben keine offenen Positionen</string>
    <string name="error_already_in_use">Nickname exists already</string>
    <string name="hint_nickname">nickname</string>
    <string name="invite_link_share">Share invite link</string>
    <string name="menu_item_friends">Friends</string>
    <string name="reminder">payment reminder</string>
    <string name="send_reminder_mail">Send remainder mail to %1$s</string>
    <string name="reminder_mail_body">Hello %1$s, for the following events I still get money:\\n%2$s Total I still get %3$s€! Please pay as soon as possible!  Yours sincerely, %4$s</string>
    <string name="dialog_friend_title">Add new Friend</string>
    <string name="dialog_friends_message">Add friend by nickname</string>
    <string name="dialog_friends_positiveBtn">add</string>
    <string name="error_user_not_found">User not found</string>
    <string name="dialog_friend_retry">try again</string>
    <string name="CABTitle">Friends selected</string>
    <string name="menu_item_remove_friend">Remove friend</string>
    <string name="dialog_friend_delete">Delete friends</string>
    <string name="dialog_friend_delete_message">Are you sure you want to delete these friends?</string>
    <string name="close">Close</string>
    <string name="dialog_friend_delete_ok">Delete</string>
    <string name="success_remove_friend">Friend successfully removed!</string>
    <string name="error_remove_friend">Friend could not  be removed!</string>
    <string name="notification_friends_empty">You have no friends in your List!</string>
    <string name="tab_expenses">Expenses</string>
    <string name="tab_balance">Balance</string>
    <string name="tab_events">Events</string>
    <string name="error_field_no_valid_email">no valid email</string>
    <string name="login_typ_create">Create</string>
    <string name="login_typ_password_forgot">Password forgot</string>
    <string name="login_typ_login">Login</string>
    <string name="login_typ_info">Info</string>
    <string name="yourself">yourself</string>
    <string name="you">You</string>
    <string name="no_event_info">no eventinfo found!</string>
    <string name="your_depts">your depts:</string>
    <string name="your_dept_claim">Your demands:</string>
    <string name="your_dept_claim_event">Your total demands:</string>
    <string name="creator_and_date_position">Created from %1$s on %2$s</string>
    <string name="creator_and_date_event">Created from %1$s for the %2$s</string>
    <string name="cash_check">cash check</string>
    <string name="cash_check_caps">CASH CHECK</string>
    <string name="cash_check_red_arrow_info">= pay</string>
    <string name="cash_check_green_arrow_info">= remind debt/ complete cash payment</string>
    <string name="position_form_name">name of position</string>
    <string name="position_inspect_clear_dept">settle debts</string>
    <string name="end_position">close position</string>
    <string name="position_inspect_release_dept_claim_ask">really waive debt?</string>
    <string name="creator">Creator:</string>
    <string name="history">history</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="nobody">nobody</string>
    <string name="position_inspect_positions">event postions</string>
    <string name="no_friends">no friends were found!</string>
    <string name="loading">loading</string>
    <string name="verify_email">Send again</string>
    <string name="auth_successful">Login successful</string>
    <string name="password_forgot">Password forgotten?</string>
    <string name="detail_verification">You have received an email! You must click on the link in the message to verify your account.</string>
    <string name="btn_save_profile">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_no_members">You must add members before you can create a position!</string>
    <string name="deleted_user">"deleted user "</string>
    <string name="error_passwords_dont_match">Passwords dont match</string>
    <string name="hint_password_again">Password again</string>
    <string name="doublebacktoexit">Please click BACK again to exit</string>
    <string name="labeljoinDate">JoinDate</string>
    <string name="event_status_upcoming">UPCOMING</string>
    <string name="event_status_error">ERROR</string>
    <string name="event_status_live">LIVE</string>
    <string name="event_status_closed">CLOSED</string>
    <string name="event_status_locked">PAYTIME</string>
    <string name="delete_event_msg">Delete this Event?</string>
    <string name="event_deleted_confirm">Event deleted!</string>
    <string name="air_of_mystery">Apparently, this user prefers to keep an air of mystery about them.</string>
    <string-array name="pay_stretch_weeks">
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>4 weeks</item>
    </string-array>
    <string name="no_events">no events found!</string>
    <string name="brokenEventCreator">your event seems to be broken, please delete and recreate it.</string>
</resources>