<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/position_inspect_show_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/position_inspect_edit_position"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/position_inspect_delete_position"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/position_inspect_done"
        android:title="@string/done"
        app:showAsAction="always"
        />
</menu>
