<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/blue_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_user_changes_add_header_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:gravity="center"
        android:text="@string/add_with_num"
        android:textColor="#2ba050"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/dialog_user_changes_add_users_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:gravity="center"
        android:text="@string/nobody"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_user_changes_remove_header_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:gravity="center"
        android:text="@string/remove_with_num"
        android:textColor="#ef4545"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/dialog_user_changes_remove_users_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:gravity="center"
        android:text="@string/nobody"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/dialog_user_changes_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/dialog_user_changes_cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:text="@string/cancel" />

</LinearLayout>