<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_gravity="center_horizontal"
        android:theme="@style/ThemeOverlay.MyTitleText"
        android:paddingBottom="@dimen/login_big_space"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/border_login"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/login_big_space"
        android:layout_margin="@dimen/login_normal"
        >

        <TextView
            android:id="@+id/loginTyp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_margin="@dimen/login_normal"
            android:text="@string/login_typ_login"
            android:theme="@style/ThemeOverlay.LoginScreenStateText"
            />

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginTyp"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_margin="@dimen/login_normal"
            android:visibility="visible"
            android:weightSum="4.0">

            <EditText
                android:id="@+id/loginEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">
                <Button
                    android:id="@+id/emailSignInButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/sign_in"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/showCreationLayoutButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_account"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

            <TextView
                android:id="@+id/passwordForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorPassword"
                android:textStyle="bold"
                android:text="@string/password_forgot"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordForgotLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/loginTyp"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="@dimen/login_normal">

            <EditText
                android:id="@+id/EmailFieldPassForgot"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/backButtonForgot"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/back_creation"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/sendNewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.0"
                    android:text="@string/resetPassword"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/creationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/loginTyp"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="@dimen/login_normal">

            <EditText
                android:id="@+id/createEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/createfieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/createfieldPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password_again"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/createfieldNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_nickname"
                android:inputType="text"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/backToLoginButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/back_creation"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/CreateAccountButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.0"
                    android:text="@string/create"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginTyp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/status"
                android:singleLine="false"
                style="@style/ThemeOverlay.MyTextDetail"
                android:text="@string/back_creation" />

            <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                android:singleLine="false"
                tools:text="Firebase User ID: 123456789abc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/backButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.0"
                    android:text="@string/back_creation"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/sendVerificationAgain"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_email"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>



        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
