<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_user_list_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/fragment_user_list_users_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/app_blue"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="TEILNEHMER"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/fragment_user_list_search_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_user_list_users_textView"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:ems="10"
        android:hint="@string/search_name_hint"
        android:inputType="textPersonName" />

    <ListView
        android:id="@+id/fragment_user_list_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/app_blue"
        android:dividerHeight="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fragment_user_list_search_editText"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin" />

    <Button
        android:id="@+id/fragment_user_list_add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_user_list_listView"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:text="@string/ok" />

    <Button
        android:id="@+id/fragment_user_list_done_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_user_list_add_btn"
        android:layout_marginBottom="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:text="@string/done" />

</RelativeLayout>